# rcl_like_wrapper

./: .gitmodules  README.md
lwrcl/: README.md  build_data_types.sh  build_libraries.sh  build_lwrcl.sh  check_process.sh  make_lwrcl_binary_installer.sh
lwrcl/apps/: CMakeLists.txt
lwrcl/apps/CustomROSTypeDataPublisher/: CMakeLists.txt
lwrcl/apps/CustomROSTypeDataPublisher/config/: config.yaml
lwrcl/apps/CustomROSTypeDataPublisher/include/: ROSTypeDataPublisher.hpp
lwrcl/apps/CustomROSTypeDataPublisher/msg/: CustomMessage.idl
lwrcl/apps/CustomROSTypeDataPublisher/src/: ROSTypeDataPublisher.cpp  ROSTypeData_main.cpp
lwrcl/apps/CustomROSTypeDataPublisherExecutor/include/: ROSTypeDataPublisherExecutor.hpp
lwrcl/apps/CustomROSTypeDataPublisherExecutor/src/: ROSTypeDataPublisherExecutor.cpp  ROSTypeData_main.cpp
lwrcl/apps/ROSTypeImagePubSub/: CMakeLists.txt
lwrcl/apps/ROSTypeImagePubSub/config/: config.yaml
lwrcl/apps/ROSTypeImagePubSub/include/: ROSTypeImagePubSub.hpp
lwrcl/apps/ROSTypeImagePubSub/src/: ROSTypeData_main.cpp  ROSTypeImagePubSub.cpp
lwrcl/apps/ROSTypeImagePubSubEdge/: CMakeLists.txt
lwrcl/apps/ROSTypeImagePubSubEdge/config/: config.yaml
lwrcl/apps/ROSTypeImagePubSubEdge/include/: ROSTypeImagePubSubEdge.hpp
lwrcl/apps/ROSTypeImagePubSubEdge/src/: ROSTypeData_main.cpp  ROSTypeImagePubSubEdge.cpp
lwrcl/apps/ROSTypeImagePubSubExecutor/: CMakeLists.txt
lwrcl/apps/ROSTypeImagePubSubExecutor/config/: config.yaml
lwrcl/apps/ROSTypeImagePubSubExecutor/include/: ROSTypeImagePubSubEdge.hpp  ROSTypeImagePubSubMono.hpp
lwrcl/apps/ROSTypeImagePubSubExecutor/src/: ROSTypeData_main.cpp  ROSTypeImagePubSubEdge.cpp  ROSTypeImagePubSubMono.cpp
lwrcl/apps/ROSTypeImagePubSubMono/: CMakeLists.txt
lwrcl/apps/ROSTypeImagePubSubMono/config/: config.yaml
lwrcl/apps/ROSTypeImagePubSubMono/include/: ROSTypeImagePubSubMono.hpp
lwrcl/apps/ROSTypeImagePubSubMono/src/: ROSTypeData_main.cpp  ROSTypeImagePubSubMono.cpp
lwrcl/apps/lwrcl_example/: CMakeLists.txt
lwrcl/apps/lwrcl_example/src/: example_class_pub.cpp  example_class_pubsub_executor.cpp  example_class_sub.cpp  example_service_client.cpp  example_service_server.cpp  example_spin.cpp  example_timer.cpp  example_waitset.cpp
lwrcl/data_types/: CMakeLists.txt
lwrcl/libraries/: CMakeLists.txt
lwrcl/libraries/src/domain_participant_counter/: CMakeLists.txt
lwrcl/libraries/src/lwrcl/: CMakeLists.txt  fastdds.xml
lwrcl/libraries/src/lwrcl/include/: channel.hpp  clock_time_duration.hpp  fast_dds_header.hpp  lwrcl.hpp  publisher.hpp  subscription.hpp  timer.hpp
lwrcl/libraries/src/lwrcl/include/rclcpp/: qos.hpp  rclcpp.hpp
lwrcl/libraries/src/lwrcl/src/: lwrcl.cpp
lwrcl/libraries/src/tf2/: CMakeLists.txt
lwrcl/libraries/src/tf2_ros/: CMakeLists.txt
lwrcl/libraries/src/tf2_ros/include/tf2_ros/: static_transform_broadcaster.h  transform_broadcaster.h  transform_listener.h
lwrcl/libraries/src/tf2_ros/src/: static_transform_broadcaster.cpp  static_transform_broadcaster_program.cpp  tf2_monitor.cpp  transform_broadcaster.cpp  transform_listener.cpp
lwrcl/lwrcl/: CMakeLists.txt
lwrcl/lwrcl/src/lwrcl/: CMakeLists.txt
lwrcl/lwrcl/src/lwrcl/include/: channel.hpp  fast_dds_header.hpp  lwrcl.hpp  publisher.hpp  qos.hpp  subscription.hpp  timer.hpp
lwrcl/lwrcl/src/lwrcl/include/rclcpp/: rclcpp.hpp
lwrcl/lwrcl/src/lwrcl/src/: lwrcl.cpp
lwrcl/lwrcl/src/tf2/src/: buffer_core.cpp
lwrcl/lwrcl/src/tf2/test/: simple_tf2_core.cpp
lwrcl/lwrcl/src/tf2_ros/include/tf2_ros/: async_buffer_interface.h  buffer.h  buffer_interface.h  static_transform_broadcaster_node.hpp  transform_broadcaster.h  transform_listener.h
lwrcl/lwrcl/src/tf2_ros/src/: buffer.cpp  static_transform_broadcaster.cpp  static_transform_broadcaster_node.cpp  tf2_echo.cpp
lwrcl_grpc/: convert_idl_to_proto.py  make_access_header.py
lwrcl_grpc/grpc_example/: CMakeLists.txt
lwrcl_grpc/grpc_example/src/: client.cpp  server.cpp
lwrcl_iceoryx/: CMakeLists.txt
lwrcl_iceoryx/lwrcl_example/: CMakeLists.txt
lwrcl_iceoryx/lwrcl_example/include/: MyData.hpp
lwrcl_iceoryx/lwrcl_example/src/: MyData.cpp  publisher.cpp  subscriber.cpp
scripts/: .gitignore  install_fast_dds_ubuntu_debian.sh  install_iceoryx_ubuntu_debian.sh
